Added basic review comment field on each item

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,14 +37,14 @@
                         </a>
                     </p>
                     {% endif %}
-                    {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    {% if product.get_rating > 0 %}
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.get_rating }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                         </small>
                     {% endif %}
@@ -109,7 +109,46 @@
                 </div>
             </div>
         </div>
+
+        <div class="w-full mt-6">
+            <h2 class="text-xl">Reviews</h2>
+
+            {% if request.user.is_authenticated %}
+                <form method="post" action="." class="mt-6 mb-6 p-6 bg-gray-100 rounded-xl">
+                    {% csrf_token %}
+
+                    <div>
+                        <label>Rating</label><br>
+                        <select name="rating">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3" selected>3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label>Comment</label><br>
+                        <textarea name="content"></textarea>
+                    </div>
+
+                    <div>
+                        <button>Submit</button>
+                    </div>
+                </form>
+            {% endif %}
+
+            {% for review in product.reviews.all %}
+            <div class="px-4 py-6 bg-gray-100 rounded-xl mb-4">
+                <strong>Rating:</strong> {{ review.rating }}/5<br>
+                <strong>Date:</strong> {{ review.created_at|date:"Y-m-d" }}<br>
+                <strong>Comment:</strong><br>
+                {{ review.content }}
+            </div>
+        {% endfor %}
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
