got the reviews to show up on the page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -139,7 +139,7 @@
                 </form>
             {% endif %}
 
-            {% for review in product.reviews.all %}
+            {% for review in reviews %}
             <div class="px-4 py-6 bg-gray-100 rounded-xl mb-4">
                 <strong>Rating:</strong> {{ review.rating }}/5<br>
                 <strong>Date:</strong> {{ review.created_at|date:"Y-m-d" }}<br>
