--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -138,16 +138,37 @@
             {% endif %}
 
             {% for review in reviews %}
-            <div class="px-4 py-6 bg-gray-100 rounded-xl mb-4">
-                <strong>Author:</strong> {{ review.created_by }}<br>
-                <strong>Rating:</strong> {{ review.rating }}/5<br>
-                <strong>Date:</strong> {{ review.created_at|date:"Y-m-d" }}<br>
-                <strong>Comment:</strong><br>
-                {{ review.content }}
+            <div class="container">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid" alt="Profile picture"/>
+                                <p class="text-secondary text-center">{{ review.created_at|date:"Y-m-d" }}</p>
+                            </div>
+                            <div class="col-md-10">
+                                <p>
+                                    <a class="float-left" style="color:blue"><strong>{{ review.created_by }}</a>
+                                    <span class="float-right"><i class="text-warning fa fa-star">{{ review.rating }}/5</i></span>
+                               </p>
+                               <div class="clearfix"></div>
+                                <p>{{ review.content }}</p>
+                                {% if user.is_authenticated %}
+                                {% if user.id == review.created_by.id %}
+                                <p>
+                                    <a a href="{% url 'edit_review' review.id %}" class="float-right btn btn-primary ml-2 text-white"> <i class="fa fa-edit"></i> Edit</a>
+                                    <a href="{% url 'delete-review' review.id %}" class="float-right btn text-white btn-danger"> <i class="fa fa-trash"></i> Delete</a>
+                               </p>
+                            </div>
+                        </div>
+                            
+                                </div>
+                            </div>
             </div>
-        {% endfor %}
-    </div>
-</div>
+        </div>
+            {% endif %}
+        {% endif %}
+    {% endfor %}
 {% endblock %}
 
 {% block postloadjs %}
