--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -70,7 +70,7 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                            <button class="decrement-qty btn btn-black rounded-0"
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="w-full mt-6">
-            <h2 class="text-xl">Reviews</h2>
+            <h2 class="text-xl text-center" >Reviews</h2>
 
             {% if request.user.is_authenticated %}
                 <form method="post" action="." class="mt-6 mb-6 p-6 bg-gray-100 rounded-xl">
@@ -159,6 +159,8 @@
                                     <a a href="{% url 'edit_review' review.id %}" class="float-right btn btn-primary ml-2 text-white"> <i class="fa fa-edit"></i> Edit</a>
                                     <a href="{% url 'delete-review' review.id %}" class="float-right btn text-white btn-danger"> <i class="fa fa-trash"></i> Delete</a>
                                </p>
+                                    {% endif %}
+                               {% endif %}
                             </div>
                         </div>
                             
@@ -166,8 +168,6 @@
                             </div>
             </div>
         </div>
-            {% endif %}
-        {% endif %}
     {% endfor %}
 {% endblock %}
 
