added a contact us form that saves to the database

--- a/newsletter/templates/newsletter/newsletter.html
+++ b/newsletter/templates/newsletter/newsletter.html
@@ -1,4 +1,4 @@
-<div class="newsletter-wrapper text-center" id="newsletter-wrapper">
+<div class="newsletter-wrapper bg-dark container-fluid" id="newsletter-wrapper">
 
     <form v-on:submit.prevent="onSubmit">
         <div class="card text-white bg-dark mb-3">
