--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -46,5 +46,10 @@
                 <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'contact' %}" id="specials-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
+                Contact Us
+            </a>
+        </li>
     </ul>
 </div>
