--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -143,7 +143,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-2">
-                                <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid" alt="Profile picture"/>
+                                <img src="/media/pro_face.jpg" class="img img-rounded img-fluid" alt="Profile picture"/>
                                 <p class="text-secondary text-center">{{ review.created_at|date:"Y-m-d" }}</p>
                             </div>
                             <div class="col-md-10">
