--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,9 +19,15 @@
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                        <a href="#footer" id="bottom" class="sub-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                            Subscribe</a>
                     </h4>
                 </div>
             </div>
         </div>
     </div>
+    <footer id="footer">{% include 'newsletter/newsletter.html' %}
+
+    </footer>
+
 {% endblock %}
