--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -121,8 +121,9 @@
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-        </a>    
+        </a>
     </div>
+    {% include 'newsletter/newsletter.html' %}
 {% endblock %}
 
 {% block postloadjs %}
