--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,6 +36,12 @@
         </li>
 
         <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'contact' %}" id="homeware-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
+                Contact
+            </a>
+        </li>
+
+        <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
@@ -45,11 +51,6 @@
                 <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
                 <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'contact' %}" id="specials-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
-                Contact Us
-            </a>
         </li>
     </ul>
 </div>
