fixed avrage rating calculation so its working and  added socials

--- a/newsletter/templates/newsletter/newsletter.html
+++ b/newsletter/templates/newsletter/newsletter.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -24,6 +25,12 @@
                 <button class="btn btn-success ">Submit</button>
             </div>
         </div>
+        <div class="social">
+                  <a target="_blank" rel="noopener noreferrer" href="https://facebook.com/" class="btn btn-social-icon btn btn-primary btn-outline-facebook "><i class="fa fa-facebook"></i></a>
+                  <a target="_blank" rel="noopener noreferrer" href="https://youtube.com/" class="btn btn-social-icon btn btn-danger btn-outline-youtube"><i class="fa fa-youtube"></i></a>
+                  <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/" class="btn btn-social-icon btn btn-info btn-outline-twitter"><i class="fa fa-twitter"></i></a>
+                  <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/" class="btn btn-social-icon btn btn-warning btn-outline-linkedin"><i class="fa fa-linkedin"></i></a>
+                </div>
     </form>
 
 </div>
