created custom 404/500 and tested them

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="PC Parts Cheap Prices Fast Delivery. We got all the the new fresh pc components to market low prices.  ">
+        <meta name="keywords" content="pc parts, parts of computer, budget gaming pc, cpu cheap, gpu cheap, computer parts,
+        pc components">
     {% endblock %}
 
     {% block extra_meta %}
@@ -35,7 +38,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Boutique Ado {% block extra_title %}{% endblock %}</title>
+    <title>PC Parts Cheap Prices Fast Delivery  {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
