added bootstrap/css to the overal styling of the page

--- a/newsletter/templates/newsletter/newsletter.html
+++ b/newsletter/templates/newsletter/newsletter.html
@@ -7,12 +7,15 @@
     </div>
 {% endblock %}
 
+<div id="delivery-banner" class="row text-center">
+    <div class="col bg-success text-white">
+        <h4 class="logo-font my-1">Sign up to Newsletter and get 5% discount</h4>
+    </div>
 
-
-<div class="content-wrapper text-center bg-dark container-fluid" id="newsletter-wrapper">
+<div class="content-wrapper text-center bg-warning container-fluid" id="newsletter-wrapper">
 
     <form v-on:submit.prevent="onSubmit">
-        <div class="card text-white bg-dark mb-3">
+        <div class="card text-black bg-warning  mb-3">
         <div class="card-footer">
             <div class="alert alert-success" role="alert" v-if="showSuccess">
                 You are Subscribed to our Newsletter!
@@ -29,7 +32,7 @@
                   <a target="_blank" rel="noopener noreferrer" href="https://facebook.com/" class="btn btn-social-icon btn btn-primary btn-outline-facebook "><i class="fa fa-facebook"></i></a>
                   <a target="_blank" rel="noopener noreferrer" href="https://youtube.com/" class="btn btn-social-icon btn btn-danger btn-outline-youtube"><i class="fa fa-youtube"></i></a>
                   <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/" class="btn btn-social-icon btn btn-info btn-outline-twitter"><i class="fa fa-twitter"></i></a>
-                  <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/" class="btn btn-social-icon btn btn-warning btn-outline-linkedin"><i class="fa fa-linkedin"></i></a>
+                  <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/" class="btn btn-social-icon btn btn-dark btn-outline-linkedin"><i class="fa fa-linkedin"></i></a>
                 </div>
     </form>
 
