--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,12 +9,14 @@
     </div>
 {% endblock %}
 
+
+
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    The new collections are here
+                <h1 class="display-4 logo-font text-light">
+                    First with new pc parts
                 </h1>
                 <div class="my-5">
                     <h4>
