updated requirements.txt and added new photos

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,8 +6,8 @@ body {
     background: url('/media/backgroundimg.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
-    font-family: 'Lato';
+    color: black;
+    font-family: 'Oswald', sans-serif;
 }
 
 
