--- a/static/css/base.css
+++ b/static/css/base.css
@@ -192,6 +192,25 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
+/* newsletter css */
+.newsletter-wrapper {
+    padding: 50px 20px;
+    text-align: center;
+    background: #f1f1f1;
+}
+
+    .newsletter-wrapper .notification {
+        margin-top: 20px;
+    }
+
+    .newsletter-wrapper .field.has-addons {
+        justify-content: center;
+    }
+
+.notification.space-below {
+    margin-bottom: 20px;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -284,8 +303,6 @@ input[name='q']::placeholder {
 }
 
 
-
-
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
@@ -310,23 +327,42 @@ input[name='q']::placeholder {
     body {
         height: calc(100vh - 116px);
     }
-}
 
-.newsletter-wrapper {
-    padding: 50px 20px;
-    text-align: center;
-    background: #f1f1f1;
-}
-
-    .newsletter-wrapper .notification {
-        margin-top: 20px;
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
     }
 
-    .newsletter-wrapper .field.has-addons {
-        justify-content: center;
+    .nav-link {
+        padding: 0.15rem;
     }
 
-.notification.space-below {
-    margin-bottom: 20px;
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
 }
+
 
