updated so the review profile picture is renderd from aws

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -129,7 +129,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-2">
-                                <img src="/media/pro_face.jpg" class="img img-rounded img-fluid" alt="Profile picture"/>
+                                <img src="https://e-store8.s3.eu-north-1.amazonaws.com/media/pro_face.jpg" class="img img-rounded img-fluid" alt="Profile picture"/>
                                 <p class="text-secondary text-center">{{ review.created_at|date:"Y-m-d" }}</p>
                             </div>
                             <div class="col-md-10">
