--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -32,7 +32,7 @@
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                                 <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="reviews_desc" {% if current_sorting == 'reviews_desc' %}selected{% endif %}>Rated (Rated products first)</option>
+                                <option value="reviews_asc" {% if current_sorting == 'reviews_asc' %}selected{% endif %}>Rated (Rated products first)</option>
                                 <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
                                 <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
                                 <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
