html/css validation

--- a/newsletter/templates/newsletter/newsletter.html
+++ b/newsletter/templates/newsletter/newsletter.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 {% endblock %}
-<div id="delivery-banner" class="row text-center">
+<div id="delivery-banner2" class="row text-center">
     <div class="col bg-success text-white">
         <h4 class="logo-font my-1">Sign up to Newsletter and get 5% discount</h4>
     </div>
@@ -21,7 +21,7 @@
             </div>
             <h2>Subscribe to our newsletter</h2>
             <div class="form-group">
-                <input type="email" class="" v-model="email" name="email" class="input" placeholder="e-mail address" required>
+                <input type="email"  v-model="email" name="email" class="input" placeholder="e-mail address" required>
             </div>
             <div class="form-group">
                 <button class="btn btn-success ">Submit</button>
@@ -33,10 +33,11 @@
                   <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/" class="btn btn-social-icon btn btn-info btn-outline-twitter"><i class="fa fa-twitter"></i></a>
                   <a target="_blank" rel="noopener noreferrer" href="https://linkedin.com/" class="btn btn-social-icon btn btn-dark btn-outline-linkedin"><i class="fa fa-linkedin"></i></a>
                 </div>
+            </div>
     </form>
+</div>
+</div>
 
-</div>
-</div>
 
 <script>
     var newsletterapp = new Vue({
