--- a/static/css/base.css
+++ b/static/css/base.css
@@ -349,6 +349,10 @@ input[name='q']::placeholder {
         font-size: .9rem;
     }
 
+    #delivery-banner2 h4 {
+        font-size: .9rem;
+    }
+
     .btn.btn-outline-black.rounded-0,
     .btn.btn-black.rounded-0 {
         padding: .375rem .375rem;
