--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,7 +7,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'contact' %}" id="homeware-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'contact' %}" id="contacts" data-toggle="" aria-haspopup="true" aria-expanded="false">
                 Contact
             </a>
         </li>
@@ -24,7 +24,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=Monitors" id="homeware-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=Monitors" id="monitors-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
                 Monitors
             </a>
         </li>
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=graphicscards" id="homeware-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'products' %}?category=graphicscards" id="graphicscard-link" data-toggle="" aria-haspopup="true" aria-expanded="false">
                 graphics cards
             </a>
         </li>
