--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -37,14 +37,14 @@
                         <button class="btn btn-black rounded-0" type="submit">Add Product</button>
                     </div>
                 </form>
-            </div>            
+            </div>
         </div>
     </div>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
