--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -129,8 +129,8 @@
     {{ block.super }}
     <script>
         $('.btt-link').click(function(e) {
-            window.scrollTo(0,0)
-        })
+            window.scrollTo(0,0);
+        });
     </script>
     
     <script>
@@ -153,6 +153,6 @@
 
                 window.location.replace(currentUrl);
             }
-        })
+        });
     </script>
 {% endblock %}
