--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -95,6 +95,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="w-full mt-6">
             <h2 class="text-xl text-center" >Reviews</h2>
@@ -134,7 +135,7 @@
                             </div>
                             <div class="col-md-10">
                                 <p>
-                                    <a class="float-left" style="color:blue"><strong>{{ review.created_by }}</a>
+                                    <a class="float-left" style="color:blue">{{ review.created_by }}</a>
                                     <span class="float-right"><i class="text-warning fa fa-star">{{ review.rating }}/5</i></span>
                                </p>
                                <div class="clearfix"></div>
@@ -142,7 +143,7 @@
                                 {% if user.is_authenticated %}
                                 {% if user.id == review.created_by.id %}
                                 <p>
-                                    <a a href="{% url 'edit_review' review.id %}" class="float-right btn btn-primary ml-2 text-white"> <i class="fa fa-edit"></i> Edit</a>
+                                    <a href="{% url 'edit_review' review.id %}" class="float-right btn btn-primary ml-2 text-white"> <i class="fa fa-edit"></i> Edit</a>
                                     <a href="{% url 'delete-review' review.id %}" class="float-right btn text-white btn-danger"> <i class="fa fa-trash"></i> Delete</a>
                                </p>
                                     {% endif %}
